[Upgrade] 优化依赖项